--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <script type="text/javascript">
 
+  var comethGameAddress = "0x3125F520a58bFec755FE61fd212891E2c9fC0a82";
+  var refreshRate = 2000;
+
   function displayPosition(id, x, y, color) {
 	   let text = new PIXI.Text(id ,{fontFamily : 'Arial', fontSize: 21, fill : color, align : 'center'});
        text.x = parseInt(x) + centerX
@@ -17,6 +20,21 @@
        app.stage.addChild(text);
   }
 
+  function displayMiningArea(ship, x, y) {
+	var area = ship.miningArea
+	var graphics = new PIXI.Graphics();
+	graphics.beginFill(0xFFFF00);
+	
+	var rectStartX = x - area + centerX
+	var rectStartY =  y - area + centerX
+	var width = area * 2
+	var heigth =  area * 2
+
+	console.log(rectStartX, rectStartY, width, heigth)
+	graphics.drawRect(rectStartX, rectStartY, width, heigth);
+	app.stage.addChild(graphics);
+  }
+ 
   function clear() {
 	for (var i = app.stage.children.length - 1; i >= 0; i--) {	app.stage.removeChild(app.stage.children[i]);};
 
@@ -30,10 +48,10 @@
 	
 	clear()
     web3.eth.getBlock("7661871").then(function(block){
-	var currentTime = block.timestamp + loop * 20;
+	var currentTime = block.timestamp + loop * 25;
 
    //web3.eth.getBlock("latest").then(function(block){
-   //var currentTime = block.timestamp
+  // var currentTime = block.timestamp
 
     blockText.text = "Block: "+block.number+" - "+currentTime
 	
@@ -41,6 +59,7 @@
       comethGameContract.methods.shipsInGame().call().then(function(result){
           result.forEach(element => {
             comethGameContract.methods.shipPosition(element.modelId, currentTime).call().then(function(result){
+				displayMiningArea(element, result.x, result.y)
 				displayPosition(element.modelId, result.x, result.y, 0xFF0000)
             });
 
@@ -59,7 +78,6 @@
 	  comethGameContract.methods.canMine("Y", "0xf845b2501A69eF480aC577b99e96796c2B6AE88E", currentTime).call().then(function(result){
 		if (result == false) {
 			canMineText.text = "CANNOT MINE"
-			canMineText.fill = 0xFF0000
 		} else {
 			canMineText.text = "!!!!!!!!!! CAN MINE !!!!!!!!!!!!!!!!"
 		}
@@ -394,7 +412,7 @@
 
    var web3 = new Web3(new Web3.providers.HttpProvider('https://rinkeby.infura.io/v3/5a1d2983f4e54626b951daa708fdbf0c'));
 
-  var comethGameContract =  new web3.eth.Contract(comethGameAbi, "0x6418BE0E1dAf4eF073ba1c32A9cd5e909E1D4e21")
+  var comethGameContract =  new web3.eth.Contract(comethGameAbi, comethGameAddress)
 
   //Create a Pixi Application
   let app = new PIXI.Application({
@@ -425,7 +443,7 @@
   window.addEventListener('load', () => {
 	document.body.appendChild(app.view);
     refreshPosition()
-    setInterval(refreshPosition, 1000);
+    setInterval(refreshPosition, refreshRate);
 });
 
 
